fix error gestion user